# xero

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  sample_clients.xlsx
data/: clients.json
src/auth/: __init__.py
src/engine/: __init__.py  docx_report.py  report_generator.py  workflow_engine.py
src/utils/: logger.py
static/: index.html
tests/: README.md  base_workflow_test.py  conftest.py  manual_test.py  run_tests.py  test_account_transactions.py  test_aged_payables.py  test_aged_receivables.py  test_profit_and_loss.py  test_selectors.py  test_trial_balance.py
tests/utils/: __init__.py  selector_validator.py
workflows/: account_transactions.yaml  aged_payables_detail.yaml  aged_receivables_detail.yaml  get_financial_year_end.yaml  login_and_redirect.yaml  navigate_to_reports.yaml  payable_invoice_detail.yaml  profit_and_loss.yaml  receivable_invoice_detail.yaml  trial_balance_report.yaml  vat_returns.yaml
